--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <tr>
         <td width="30" align="center">7</td>
         <td width="230">Мельник Христина </td>
-        <td><a href="https://.github.io" target="_blank">https://Hinkal4ik.github.io/</a></td>
-        <td><a href="https://github.com/Hinkal4ik" target="_blank">https://github.com/Hinkal4ik/Hinkal4ik.github.io</a></td>
+        <td><a href="https://.github.io" target="_blank">https://.github.io/</a></td>
+        <td><a href="https://github.com/" target="_blank">https://github.com//.github.io</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
