--- a/index.html
+++ b/index.html
@@ -1058,10 +1058,10 @@
           <tr>
             <td width="30" align="center">4</td>
             <td width="230">Заводяна Марія  </td>
-            <td><a href="https://.github.io" target="_blank">https://.github.io/</a></td>
-            <td><a href="https://github.com/" target="_blank">https://github.com//.github.io</a></td>
+            <td><a href="https://Zavodiana.github.io" target="_blank">https://Zavodiana.github.io/</a></td>
+            <td><a href="https://github.com/Zavodiana" target="_blank">https://github.com/Zavodiana/Zavodiana.github.io</a></td>
             <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-            <td align="center">0</td>
+            <td align="center">2</td>
           </tr>
           <tr>
             <td width="30" align="center">5</td>
