--- a/index.html
+++ b/index.html
@@ -37,24 +37,24 @@
         <td width="230"> Білий Владислав </td>
         <td><a href="https://A1aXY1.github.io" target="_blank">https://A1aXY1.github.io/</a></td>
         <td><a href="https://github.com/A1aXY1" target="_blank">https://github.com/A1aXY1/A1aXY1.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/bilyy" target="_blank">http://webdeco.pp.ua/bilyy</a></td>
+        <td align="center">6</td>
       </tr>     
       <tr>
         <td width="30" align="center">2</td>
         <td width="230"> Бортнік Юрій </td>
         <td><a href="https://yura5255.github.io" target="_blank">https://yura5255.github.io/</a></td>
         <td><a href="https://github.com/yura5255" target="_blank">https://github.com/yura5255/yura5255.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/bortnik" target="_blank">http://webdeco.pp.ua/bortnik</a></td>
+        <td align="center">6</td>
       </tr>      
       <tr>
         <td width="30" align="center">3</td>
         <td width="230"> Бугрим Максим</td>
         <td><a href="https://Max6456.github.io" target="_blank">https://Max6456.github.io/</a></td>
         <td><a href="https://github.com/Max6456" target="_blank">https://github.com/Max6456/Max6456.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/Buhrym" target="_blank">http://webdeco.pp.ua/Buhrym</a></td>
+        <td align="center">6</td>
       </tr>
       <tr>
         <td width="30" align="center">4</td>
@@ -69,16 +69,16 @@
         <td width="230">Кісіль Дмитро </td>
         <td><a href="https://.github.io" target="_blank">https://hinkal4ik.github.io/</a></td>
         <td><a href="https://github.com/hinkal4ik" target="_blank">https://github.com/hinkal4ik/hinkal4ik.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/kisil" target="_blank">http://webdeco.pp.ua/kisil</a></td>
+        <td align="center">10</td>
       </tr>
       <tr>
         <td width="30" align="center">6</td>
         <td width="230"> Курилович Назар</td>
         <td><a href="https://sayron2332.github.io" target="_blank">https://sayron2332.github.io/</a></td>
         <td><a href="https://github.com/sayron2332" target="_blank">https://github.com/sayron2332/sayron2332.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/kurylovych" target="_blank">http://webdeco.pp.ua/kurylovych</a></td>
+        <td align="center">6</td>
       </tr>
       <tr>
         <td width="30" align="center">7</td>
@@ -93,16 +93,16 @@
         <td width="230"> Пророк Володимир</td>
         <td><a href="https://lovisnice.github.io" target="_blank">https://lovisnice.github.io/</a></td>
         <td><a href="https://github.com/lovisnice" target="_blank">https://github.com/lovisnice/lovisnice.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/prorok" target="_blank">http://webdeco.pp.ua/prorok</a></td>
+        <td align="center">7</td>
       </tr>
       <tr>
         <td width="30" align="center">9</td>
         <td width="230">Чернега Максим </td>
         <td><a href="https://komonobread.github.io" target="_blank">https:/komonobread.github.io/</a></td>
         <td><a href="https://github.com/komonobread" target="_blank">https://github.com/komonobread/komonobread.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/chernega" target="_blank">http://webdeco.pp.ua/chernega</a></td>
+        <td align="center">5</td>
       </tr>
       <tr>
         <td width="30" align="center">10</td>
@@ -117,8 +117,8 @@
         <td width="230">Шостак Дмитро</td>
         <td><a href="https://d3zon1x.github.io" target="_blank">https://d3zon1x.github.io/</a></td>
         <td><a href="https://github.com/d3zon1x" target="_blank">https://github.com/d3zon1x/d3zon1x.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
-        <td align="center">2</td>
+        <td><a href="http://webdeco.pp.ua/shostak" target="_blank">http://webdeco.pp.ua/shostak</a></td>
+        <td align="center">5</td>
       </tr>
     </table>
 
@@ -249,7 +249,7 @@
             <td width="230">Євчук Ярослав  </td>
             <td><a href="https://7Yarik7.github.io" target="_blank">https://7Yarik7.github.io/</a></td>
             <td><a href="https://github.com/7Yarik7" target="_blank">https://github.com/7Yarik7/7Yarik7.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/yevchuk" target="_blank">http://webdeco.pp.ua/yevchuk</a></td>
             <td align="center">2</td>
           </tr>
           <tr>
@@ -265,7 +265,7 @@
             <td width="230"> Гапич Ігор  </td>
             <td><a href="https://igorgapich.github.io" target="_blank">https://igorgapich.github.io/</a></td>
             <td><a href="https://github.com/igorgapich" target="_blank">https://github.com/igorgapich/igorgapich.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/gapich" target="_blank">http://webdeco.pp.ua/gapich</a></td>
             <td align="center">2</td>
           </tr>
           <tr>
@@ -321,7 +321,7 @@
             <td width="230"> Терешкович Дмитро  </td>
             <td><a href="https://DimaPrograms.github.io" target="_blank">https://DimaPrograms.github.io/</a></td>
             <td><a href="https://github.com/DimaPrograms" target="_blank">https://github.com/DimaPrograms/DimaPrograms.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/tereshkovych" target="_blank">http://webdeco.pp.ua/tereshkovych</a></td>
             <td align="center">2</td>  
           </tr>
     </table>
@@ -399,7 +399,7 @@
             <td width="230">Мосійчук Тетяна  </td>
             <td><a href="https://aeriel999.github.io" target="_blank">https://aeriel999.github.io/</a></td>
             <td><a href="https://github.com/aeriel999" target="_blank">https://github.com/aeriel999/aeriel999.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/Mosiychuk" target="_blank">http://webdeco.pp.ua/Mosiychuk</a></td>
             <td align="center">5</td>
           </tr>
           <tr>
@@ -438,7 +438,7 @@
         <td width="230"> Кутуков Артур </td>
         <td><a href="https://kutukov2000.github.io" target="_blank">https://kutukov2000.github.io/</a></td>
         <td><a href="https://github.com/kutukov2000" target="_blank">https://github.com/kutukov2000/kutukov2000.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/kutukov" target="_blank">http://webdeco.pp.ua/kutukov</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -478,7 +478,7 @@
         <td width="230"> Капітанюк Максим </td>
         <td><a href="https://KapitanyukMax.github.io" target="_blank">https://KapitanyukMax.github.io/</a></td>
         <td><a href="https://github.com/KapitanyukMax" target="_blank">https://github.com/KapitanyukMax/KapitanyukMax.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/kapitaniuk" target="_blank">http://webdeco.pp.ua/kapitaniuk</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -486,7 +486,7 @@
         <td width="230"> Кріль Віктор</td>
         <td><a href="https://vivk27.github.io" target="_blank">https://vivk27.github.io/</a></td>
         <td><a href="https://github.com/vivk27" target="_blank">https://github.com/vivk27/vivk27.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/kril" target="_blank">http://webdeco.pp.ua/kril</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -534,7 +534,7 @@
         <td width="230">Хвас Юрій </td>
         <td><a href="https://yrakhwas.github.io" target="_blank">https://yrakhwas.github.io/</a></td>
         <td><a href="https://github.com/yrakhwas" target="_blank">https://github.com/yrakhwas/yrakhwas.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/hvas" target="_blank">http://webdeco.pp.ua/hvas</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -620,7 +620,7 @@
                         <td width="230">Костенко Ростислав </td>
                         <td><a href="https://rostyk1699.github.io" target="_blank">https://rostyk1699.github.io/</a></td>
                         <td><a href="https://github.com/rostyk1699" target="_blank">https://github.com/rostyk1699/rostyk1699.github.io</a></td>
-                        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+                        <td><a href="http://webdeco.pp.ua/kostenko" target="_blank">http://webdeco.pp.ua/kostenko</a></td>
                         <td align="center">2</td>
                       </tr> 
                       <tr>
@@ -660,7 +660,7 @@
                         <td width="230">Стрельчук Богдан </td>
                         <td><a href="https://strelchuk26.github.io" target="_blank">https://strelchuk26.github.io/</a></td>
                         <td><a href="https://github.com/strelchuk26" target="_blank">https://github.com/strelchuk26/strelchuk26.github.io</a></td>
-                        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+                        <td><a href="http://webdeco.pp.ua/strelchuk" target="_blank">http://webdeco.pp.ua/strelchuk</a></td>
                         <td align="center">2</td>
                       </tr> 
       </table>
@@ -746,7 +746,7 @@
               <td width="230">Турович Олександр</td>
               <td><a href="https://turovycholex.github.io/" target="_blank">https://turovycholex.github.io/</a></td>
               <td><a href="https://github.com/turovycholex" target="_blank">https://github.com/turovycholex/turovycholex.github.io</a></td>
-              <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+              <td><a href="http://webdeco.pp.ua/turovych" target="_blank">http://webdeco.pp.ua/turovych</a></td>
               <td align="center">2</td>
             </tr>  
             <tr>
@@ -808,7 +808,7 @@
                   <td width="230">Зубар Назарій  </td>
                   <td><a href="https://zubnaz.github.io/" target="_blank">https://zubnaz.github.io/</a></td>
                   <td><a href="https://github.com/zubnaz" target="_blank">https://github.com/zubnaz/zubnaz.github.io</a></td>
-                  <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+                  <td><a href="http://webdeco.pp.ua/zubar" target="_blank">http://webdeco.pp.ua/zubar</a></td>
                   <td align="center">2</td>
                 </tr>
                 <tr>
@@ -832,7 +832,7 @@
                   <td width="230">Левчук Максим  </td>
                   <td><a href="https://MaxLevchuk.github.io/" target="_blank">https://MaxLevchuk.github.io/</a></td>
                   <td><a href="https://github.com/MaxLevchuk" target="_blank">https://github.com/MaxLevchuk/MaxLevchuk.github.io</a></td>
-                  <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+                  <td><a href="http://webdeco.pp.ua/Levchuk" target="_blank">http://webdeco.pp.ua/Levchuk</a></td>
                   <td align="center">2</td>
                 </tr>
                 <tr>
@@ -918,7 +918,7 @@
         <td width="230">Іванюк Олександр </td>
         <td><a href="https://ivanyuk1985.github.io" target="_blank">https://ivanyuk1985.github.io/</a></td>
         <td><a href="https://github.com/ivanyuk1985" target="_blank">https://github.com/ivanyuk1985/ivanyuk1985.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/ivanyuk" target="_blank">http://webdeco.pp.ua/ivanyuk</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -982,7 +982,7 @@
         <td width="230">Поливко Владислав </td>
         <td><a href="https://vladpolyvko7.github.io" target="_blank">https://vladpolyvko7.github.io/</a></td>
         <td><a href="https://github.com/vladpolyvko7" target="_blank">https://github.com/vladpolyvko7/vladpolyvko7.github.io</a></td>
-        <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+        <td><a href="http://webdeco.pp.ua/polyvko" target="_blank">http://webdeco.pp.ua/polyvko</a></td>
         <td align="center">2</td>
       </tr>
       <tr>
@@ -1068,7 +1068,7 @@
             <td width="230">Крилов Дмитро </td>
             <td><a href="https://Dimononon.github.io" target="_blank">https://Dimononon.github.io/</a></td>
             <td><a href="https://github.com/Dimononon" target="_blank">https://github.com/Dimononon/Dimononon.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/krylov" target="_blank">http://webdeco.pp.ua/krylov</a></td>
             <td align="center">2</td>
           </tr>
           <tr>
@@ -1076,7 +1076,7 @@
             <td width="230">Огороднічук Юлія </td>
             <td><a href="https://ohorodnichuk17.github.io" target="_blank">https://ohorodnichuk17.github.io/</a></td>
             <td><a href="https://github.com/ohorodnichuk17" target="_blank">https://github.com/ohorodnichuk17/ohorodnichuk17.github.io</a></td>
-            <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
+            <td><a href="http://webdeco.pp.ua/ohorodnichuk" target="_blank">http://webdeco.pp.ua/ohorodnichuk</a></td>
             <td align="center">2</td>
           </tr>
           <tr>
