--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <td width="30" align="center">1</td>
         <td width="230"> Холод Владислав </td>
         <td><a href="https://Kholod13.github.io" target="_blank">https://Kholod13.github.io/</a></td>
-        <td><a href="https://github.com/Kholod13 target="_blank">https://github.com/Kholod13.github.io</a></td>
+        <td><a href="https://github.com/Kholod13 target="_blank">https://github.com/Kholod13</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>     
@@ -44,21 +44,21 @@
         <td width="30" align="center">2</td>
         <td width="230">Стрельцов  </td>
         <td><a href="https://Streltsov1.github.io" target="_blank">https://Streltsov1.github.io/</a></td>
-        <td><a href="https://github.com/Streltsov1 target="_blank">https://github.com/Streltsov1.github.io</a></td>
+        <td><a href="https://github.com/Streltsov1 target="_blank">https://github.com/Streltsov1</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>          <tr>
         <td width="30" align="center">3</td>
         <td width="230"> Чернова Дарина </td>
         <td><a href="https://Kllsel.github.io" target="_blank">https://Kllsel.github.io/</a></td>
-        <td><a href="https://github.com/Kllsel target="_blank">https://github.com/Kllsel.github.io</a></td>
+        <td><a href="https://github.com/Kllsel target="_blank">https://github.com/Kllsel</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>          <tr>
         <td width="30" align="center">4</td>
         <td width="230">Ковальчук Олександр  </td>
         <td><a href="https://Sashok9203.github.io" target="_blank">https://Sashok9203.github.io/</a></td>
-        <td><a href="https://github.com/Sashok9203 target="_blank">https://github.com/Sashok9203.github.io</a></td>
+        <td><a href="https://github.com/Sashok9203 target="_blank">https://github.com/Sashok9203</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -66,7 +66,7 @@
         <td width="30" align="center">5</td>
         <td width="230">Шадюк Артем  </td>
         <td><a href="https://Artem0904.github.io" target="_blank">https://Artem0904.github.io/</a></td>
-        <td><a href="https://github.com/Artem0904 target="_blank">https://github.com/Artem0904.github.io</a></td>
+        <td><a href="https://github.com/Artem0904 target="_blank">https://github.com/Artem0904</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr> 
@@ -74,7 +74,7 @@
         <td width="30" align="center">6</td>
         <td width="230"> Марців </td>
         <td><a href="https://kaljanmp.github.io" target="_blank">https://kaljanmp.github.io/</a></td>
-        <td><a href="https://github.com/kaljanmp target="_blank">https://github.com/kaljanmp.github.io</a></td>
+        <td><a href="https://github.com/kaljanmp target="_blank">https://github.com/kaljanmp</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr> 
@@ -82,7 +82,7 @@
         <td width="30" align="center">7</td>
         <td width="230">Семенюк  </td>
         <td><a href="https://VasiaSem.github.io" target="_blank">https://VasiaSem.github.io/</a></td>
-        <td><a href="https://github.com/VasiaSem target="_blank">https://github.com/VasiaSem.github.io</a></td>
+        <td><a href="https://github.com/VasiaSem target="_blank">https://github.com/VasiaSem</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr> 
@@ -90,7 +90,7 @@
         <td width="30" align="center">7</td>
         <td width="230">Антощук  </td>
         <td><a href="https://RomanAntoschuk.github.io" target="_blank">https://RomanAntoschuk.github.io/</a></td>
-        <td><a href="https://github.com/RomanAntoschuk target="_blank">https://github.com/RomanAntoschuk.github.io</a></td>
+        <td><a href="https://github.com/RomanAntoschuk target="_blank">https://github.com/RomanAntoschuk</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr> 
@@ -113,7 +113,7 @@
           <td width="30" align="center">1</td>
           <td width="230">  </td>
           <td><a href="https://.github.io" target="_blank">https://.github.io/</a></td>
-          <td><a href="https://github.com/ target="_blank">https://github.com/.github.io</a></td>
+          <td><a href="https://github.com/ target="_blank">https://github.com/</a></td>
           <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
           <td align="center">0</td>
         </tr>  
@@ -136,7 +136,7 @@
             <td width="30" align="center">1</td>
             <td width="230">  </td>
             <td><a href="https://.github.io" target="_blank">https://.github.io/</a></td>
-            <td><a href="https://github.com/ target="_blank">https://github.com/.github.io</a></td>
+            <td><a href="https://github.com/ target="_blank">https://github.com/</a></td>
             <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
             <td align="center">0</td>
           </tr>  
