--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </tr>     
       <tr>
         <td width="30" align="center">2</td>
-        <td width="230">Стрельцов  </td>
+        <td width="230">Стрельцов Олег </td>
         <td><a href="https://Streltsov1.github.io" target="_blank">https://Streltsov1.github.io/</a></td>
         <td><a href="https://github.com/Streltsov1 target="_blank">https://github.com/Streltsov1</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
@@ -72,7 +72,7 @@
       </tr> 
       <tr>
         <td width="30" align="center">6</td>
-        <td width="230"> Марців </td>
+        <td width="230"> Марців Микола </td>
         <td><a href="https://kaljanmp.github.io" target="_blank">https://kaljanmp.github.io/</a></td>
         <td><a href="https://github.com/kaljanmp target="_blank">https://github.com/kaljanmp</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
@@ -80,15 +80,15 @@
       </tr> 
       <tr>
         <td width="30" align="center">7</td>
-        <td width="230">Семенюк  </td>
+        <td width="230">Семенюк Василь  </td>
         <td><a href="https://VasiaSem.github.io" target="_blank">https://VasiaSem.github.io/</a></td>
         <td><a href="https://github.com/VasiaSem target="_blank">https://github.com/VasiaSem</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr> 
       <tr>
-        <td width="30" align="center">7</td>
-        <td width="230">Антощук  </td>
+        <td width="30" align="center">8</td>
+        <td width="230"> Антощук Роман  </td>
         <td><a href="https://RomanAntoschuk.github.io" target="_blank">https://RomanAntoschuk.github.io/</a></td>
         <td><a href="https://github.com/RomanAntoschuk target="_blank">https://github.com/RomanAntoschuk</a></td>
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
