--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <td width="30" align="center">2</td>
         <td width="230">Стрельцов Олег </td>
         <td><a href="https://Streltsov1.github.io" target="_blank">https://Streltsov1.github.io/</a></td>
-        <td><a href="https://github.com/Streltsov1" target="_blank">https://github.com/Streltsov1</a></td> https://github.com/Streltsov1
+        <td><a href="https://github.com/Streltsov1" target="_blank">https://github.com/Streltsov1</a></td> 
         <td><a href="http://webdeco.pp.ua/" target="_blank">http://webdeco.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>          <tr>
