--- a/index.html
+++ b/index.html
@@ -152,16 +152,16 @@
       <tr>
         <td width="30" align="center">1</td>
         <td width="230">Андрошулік Віталій</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://vitaliy1androshulik.github.io" target="_blank">https://vitaliy1androshulik.github.io/</a></td>
+        <td><a href="https://github.com/vitaliy1androshulik" target="_blank">https://github.com/vitaliy1androshulik</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>    
       <tr>
         <td width="30" align="center">2</td>
         <td width="230">Андрошулік Володимир </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://wexler592.github.io" target="_blank">https://wexler592.github.io/</a></td>
+        <td><a href="https://github.com/wexler592" target="_blank">https://github.com/wexler592</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -176,24 +176,24 @@
       <tr>
         <td width="30" align="center">4</td>
         <td width="230">Гоменюк Владислав </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://vlad-home.github.io" target="_blank">https://vlad-home.github.io/</a></td>
+        <td><a href="https://github.com/vlad-home" target="_blank">https://github.com/vlad-home</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">5</td>
         <td width="230">Гомоль Олесь </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://tstert30.github.io" target="_blank">https://tstert30.github.io/</a></td>
+        <td><a href="https://github.com/tstert30" target="_blank">https://github.com/tstert30</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">6</td>
         <td width="230">Гонтарук Микола </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://hontarukmykola.github.io" target="_blank">https://hontarukmykola.github.io/</a></td>
+        <td><a href="https://github.com/hontarukmykola" target="_blank">https://github.com/hontarukmykola</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -208,16 +208,16 @@
       <tr>
         <td width="30" align="center">8</td>
         <td width="230">Давидюк Олександр </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://oleksandr1727.github.io" target="_blank">https://oleksandr1727.github.io/</a></td>
+        <td><a href="https://github.com/oleksandr1727" target="_blank">https://github.com/oleksandr1727</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">9</td>
         <td width="230">Кулініч Роман </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://kulinich-roman.github.io" target="_blank">https://kulinich-roman.github.io/</a></td>
+        <td><a href="https://github.com/kulinich-roman" target="_blank">https://github.com/kulinich-roman</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -278,16 +278,16 @@
       <tr>
         <td width="30" align="center">1</td>
         <td width="230">Бідюк Даниїл </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://Zwellll.github.io" target="_blank">https://Zwellll.github.io/</a></td>
+        <td><a href="https://github.com/Zwellll" target="_blank">https://github.com/Zwellll</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>   
       <tr>
         <td width="30" align="center">2</td>
         <td width="230">Богачук Максим</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://bogachukmax.github.io" target="_blank">https://bogachukmax.github.io/</a></td>
+        <td><a href="https://github.com/bogachukmax" target="_blank">https://github.com/bogachukmax</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
@@ -326,16 +326,16 @@
       <tr>
         <td width="30" align="center">7</td>
         <td width="230">Миронюк Дмитро </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://dimamironuk.github.io" target="_blank">https://dimamironuk.github.io/</a></td>
+        <td><a href="https://github.com/dimamironuk" target="_blank">https://github.com/dimamironuk</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
         <td width="30" align="center">8</td>
         <td width="230">Педос Андрій</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://nitesw.github.io" target="_blank">https://nitesw.github.io/</a></td>
+        <td><a href="https://github.com/nitesw" target="_blank">https://github.com/nitesw</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
@@ -366,16 +366,16 @@
       <tr>
         <td width="30" align="center">12</td>
         <td width="230">Смоляр Станіслав </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://stssmlr.github.io" target="_blank">https://stssmlr.github.io/</a></td>
+        <td><a href="https://github.com/stssmlr" target="_blank">https://github.com/stssmlr</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
         <td width="30" align="center">13</td>
         <td width="230">Трофімчук Володимир </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://volodatrof.github.io" target="_blank">https://volodatrof.github.io/</a></td>
+        <td><a href="https://github.com/volodatrof" target="_blank">https://github.com/volodatrof</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
