Добавив групу ВБ212-4

--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
+      <tr>
+        <td width="30" align="center">15</td>
+        <td width="230">Сущик Віталій</td>
+        <td><a href="https://vitaliy222.github.io" target="_blank">https://vitaliy222.github.io/</a></td>
+        <td><a href="https://github.com/vitaliy222" target="_blank">https://github.com/vitaliy222</a></td>
+        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td align="center">0</td>
+      </tr>  
     </table>
     <hr>
 <h1 align="center">Сайти Групи БД211<h1>
