Добавив студ БД211

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
       <tr>
         <td width="30" align="center">3</td>
         <td width="230">Гамаш Богдан </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://bogdan4060.github.io" target="_blank">https://bogdan4060.github.io/</a></td>
+        <td><a href="https://github.com/bogdan4060" target="_blank">https://github.com/bogdan4060</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -208,8 +208,8 @@
       <tr>
         <td width="30" align="center">7</td>
         <td width="230">Горчак Дмитро </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://dmitriygorchak.github.io" target="_blank">https://dmitriygorchak.github.io/</a></td>
+        <td><a href="https://github.com/dmitriygorchak" target="_blank">https://github.com/dmitriygorchak</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -232,16 +232,16 @@
       <tr>
         <td width="30" align="center">10</td>
         <td width="230">Лабенський Віталій </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://Mirada2701.github.io" target="_blank">https://Mirada2701.github.io/</a></td>
+        <td><a href="https://github.com/Mirada2701" target="_blank">https://github.com/Mirada2701</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">11</td>
         <td width="230">Міняйло Артем </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://dead0utside7.github.io" target="_blank">https://dead0utside7.github.io/</a></td>
+        <td><a href="https://github.com/dead0utside7" target="_blank">https://github.com/dead0utside7</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -264,8 +264,8 @@
       <tr>
         <td width="30" align="center">14</td>
         <td width="230">Юрчук Микола </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://Mykola-Yrchuk.github.io" target="_blank">https://Mykola-Yrchuk.github.io/</a></td>
+        <td><a href="https://github.com/Mykola-Yrchuk" target="_blank">https://github.com/Mykola-Yrchuk</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
