--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
       <tr>
         <td width="30" align="center">1</td>
         <td width="230"> Безлюдний Владислав </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://vlad0607.github.io" target="_blank">https://vlad0607.github.io/</a></td>
+        <td><a href="https://github.com/vlad0607" target="_blank">https://github.com/vlad0607</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>    
@@ -427,32 +427,32 @@
       <tr>
         <td width="30" align="center">3</td>
         <td width="230"> Гуц Василь</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://vasiliygts.github.io" target="_blank">https://vasiliygts.github.io/</a></td>
+        <td><a href="https://github.com/vasiliygts" target="_blank">https://github.com/vasiliygts</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">4</td>
         <td width="230">Заєць Владислав  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://zaietsvlad.github.io" target="_blank">https://zaietsvlad.github.io/</a></td>
+        <td><a href="https://github.com/zaietsvlad" target="_blank">https://github.com/zaietsvlad</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">5</td>
         <td width="230">Ковш Юрій </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://yrkov.github.io" target="_blank">https://yrkov.github.io/</a></td>
+        <td><a href="https://github.com/yrkov" target="_blank">https://github.com/yrkov</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
         <td width="30" align="center">6</td>
         <td width="230">Конончук Андрій  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://andrikonon.github.io" target="_blank">https://andrikonon.github.io/</a></td>
+        <td><a href="https://github.com/andrikonon" target="_blank">https://github.com/andrikonon</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -475,8 +475,8 @@
       <tr>
         <td width="30" align="center">9</td>
         <td width="230">Сульжик Станіслав  </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://KaTaLkA.github.io" target="_blank">https://KaTaLkA.github.io/</a></td>
+        <td><a href="https://github.com/KaTaLkA" target="_blank">https://github.com/KaTaLkA</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
