--- a/index.html
+++ b/index.html
@@ -505,32 +505,32 @@
           <tr>
             <td width="30" align="center">2</td>
             <td width="230">Валяєв Андрій </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://tenderbussiness.github.io" target="_blank">https://tenderbussiness.github.io/</a></td>
+            <td><a href="https://github.com/tenderbussiness" target="_blank">https://github.com/tenderbussiness</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
           <tr>
             <td width="30" align="center">3</td>
             <td width="230">Головко Максим  </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://holovko1.github.io" target="_blank">https://holovko1.github.io/</a></td>
+            <td><a href="https://github.com/holovko1" target="_blank">https://github.com/holovko1</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
           <tr>
             <td width="30" align="center">4</td>
             <td width="230">Гусак Станіслав  </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://kazzutora.github.io" target="_blank">https://kazzutora.github.io/</a></td>
+            <td><a href="https://github.com/kazzutora" target="_blank">https://github.com/kazzutora</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
           <tr>
             <td width="30" align="center">5</td>
             <td width="230">Полунець Андрій  </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://Svarog13.github.io" target="_blank">https://Svarog13.github.io/</a></td>
+            <td><a href="https://github.com/Svarog13" target="_blank">https://github.com/Svarog13</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
@@ -553,8 +553,8 @@
           <tr>
             <td width="30" align="center">8</td>
             <td width="230">Сандара Максим  </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://MaksSandor.github.io" target="_blank">https://MaksSandor.github.io/</a></td>
+            <td><a href="https://github.com/MaksSandor" target="_blank">https://github.com/MaksSandor</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
@@ -591,8 +591,8 @@
               <tr>
                 <td width="30" align="center">1</td>
                 <td width="230">Іванін Андрій  </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://ivaninandrii.github.io" target="_blank">https://ivaninandrii.github.io/</a></td>
+                <td><a href="https://github.com/ivaninandrii" target="_blank">https://github.com/ivaninandrii</a></td>
                 <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
                 <td align="center">0</td>
               </tr>    
@@ -623,8 +623,8 @@
               <tr>
                 <td width="30" align="center">1</td>
                 <td width="230">Войно Володимир </td>
-                <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-                <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+                <td><a href="https://voinore1.github.io" target="_blank">https://voinore1.github.io/</a></td>
+                <td><a href="https://github.com/voinore1" target="_blank">https://github.com/voinore1</a></td>
                 <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
                 <td align="center">0</td>
               </tr>    
