--- a/index.html
+++ b/index.html
@@ -545,8 +545,8 @@
           <tr>
             <td width="30" align="center">7</td>
             <td width="230">Самков Александр  </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://alekyou17.github.io" target="_blank">https://alekyou17.github.io/</a></td>
+            <td><a href="https://github.com/alekyou17" target="_blank">https://github.com/alekyou17</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
@@ -569,8 +569,8 @@
           <tr>
             <td width="30" align="center">10</td>
             <td width="230">Цимбалюк Антон </td>
-            <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-            <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+            <td><a href="https://antoncymbaliuk.github.io" target="_blank">https://antoncymbaliuk.github.io/</a></td>
+            <td><a href="https://github.com/antoncymbaliuk" target="_blank">https://github.com/antoncymbaliuk</a></td>
             <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
             <td align="center">0</td>
           </tr> 
