--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <td width="230">Богачук Максим</td>
         <td><a href="https://bogachukmax.github.io" target="_blank">https://bogachukmax.github.io/</a></td>
         <td><a href="https://github.com/bogachukmax" target="_blank">https://github.com/bogachukmax</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://bogacukmax.rf.gd/" target="_blank">http://bogacukmax.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
@@ -304,7 +304,7 @@
         <td width="230">Комар Андрій </td>
         <td><a href="https://komarbv211.github.io" target="_blank">https://komarbv211.github.io/</a></td>
         <td><a href="https://github.com/komarbv211" target="_blank">https://github.com/komarbv211</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://komar.rf.gd/" target="_blank">http://komar.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
@@ -320,7 +320,7 @@
         <td width="230">Мазур Олександр </td>
         <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
         <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://mazur.rf.gd/" target="_blank">http://mazur.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
@@ -328,7 +328,7 @@
         <td width="230">Миронюк Дмитро </td>
         <td><a href="https://dimamironuk.github.io" target="_blank">https://dimamironuk.github.io/</a></td>
         <td><a href="https://github.com/dimamironuk" target="_blank">https://github.com/dimamironuk</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://mironuk.rf.gd/" target="_blank">http://mironuk.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
@@ -368,7 +368,7 @@
         <td width="230">Смоляр Станіслав </td>
         <td><a href="https://stssmlr.github.io" target="_blank">https://stssmlr.github.io/</a></td>
         <td><a href="https://github.com/stssmlr" target="_blank">https://github.com/stssmlr</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://smoliar.rf.gd/" target="_blank">http://smoliar.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
@@ -376,7 +376,7 @@
         <td width="230">Трофімчук Володимир </td>
         <td><a href="https://volodatrof.github.io" target="_blank">https://volodatrof.github.io/</a></td>
         <td><a href="https://github.com/volodatrof" target="_blank">https://github.com/volodatrof</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="trofimchuk.42web.io" target="_blank">trofimchuk.42web.io</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
