--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <td width="230">Андрошулік Віталій</td>
         <td><a href="https://vitaliy1androshulik.github.io" target="_blank">https://vitaliy1androshulik.github.io/</a></td>
         <td><a href="https://github.com/vitaliy1androshulik" target="_blank">https://github.com/vitaliy1androshulik</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://vitaliyandr.epizy.com/" target="_blank">http://vitaliyandr.epizy.com/</a></td>
         <td align="center">0</td>
       </tr>    
       <tr>
@@ -178,7 +178,7 @@
         <td width="230">Гоменюк Владислав </td>
         <td><a href="https://vlad-home.github.io" target="_blank">https://vlad-home.github.io/</a></td>
         <td><a href="https://github.com/vlad-home" target="_blank">https://github.com/vlad-home</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://vlad-home.rf.gd/" target="_blank">http://vlad-home.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -186,7 +186,7 @@
         <td width="230">Гомоль Олесь </td>
         <td><a href="https://tstert30.github.io" target="_blank">https://tstert30.github.io/</a></td>
         <td><a href="https://github.com/tstert30" target="_blank">https://github.com/tstert30</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://gomol.epizy.com/" target="_blank">http://gomol.epizy.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -194,7 +194,7 @@
         <td width="230">Гонтарук Микола </td>
         <td><a href="https://hontarukmykola.github.io" target="_blank">https://hontarukmykola.github.io/</a></td>
         <td><a href="https://github.com/hontarukmykola" target="_blank">https://github.com/hontarukmykola</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://mykola.rf.gd/" target="_blank">http://mykola.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -202,7 +202,7 @@
         <td width="230">Горчак Дмитро </td>
         <td><a href="https://dmitriygorchak.github.io" target="_blank">https://dmitriygorchak.github.io/</a></td>
         <td><a href="https://github.com/dmitriygorchak" target="_blank">https://github.com/dmitriygorchak</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://gorchak.epizy.com/" target="_blank">http://gorchak.epizy.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -210,7 +210,7 @@
         <td width="230">Давидюк Олександр </td>
         <td><a href="https://oleksandr1727.github.io" target="_blank">https://oleksandr1727.github.io/</a></td>
         <td><a href="https://github.com/oleksandr1727" target="_blank">https://github.com/oleksandr1727</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://davidyuk1727.rf.gd/" target="_blank">http://davidyuk1727.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -218,7 +218,7 @@
         <td width="230">Кулініч Роман </td>
         <td><a href="https://kulinich-roman.github.io" target="_blank">https://kulinich-roman.github.io/</a></td>
         <td><a href="https://github.com/kulinich-roman" target="_blank">https://github.com/kulinich-roman</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://kulinich.epizy.com/" target="_blank">http://kulinich.epizy.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -234,7 +234,7 @@
         <td width="230">Міняйло Артем </td>
         <td><a href="https://dead0utside7.github.io" target="_blank">https://dead0utside7.github.io/</a></td>
         <td><a href="https://github.com/dead0utside7" target="_blank">https://github.com/dead0utside7</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://minaylo.epizy.com/" target="_blank">http://minaylo.epizy.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -242,7 +242,7 @@
         <td width="230">Повесьмо Анастасія</td>
         <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
         <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://povesmo.rf.gd/" target="_blank">http://povesmo.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -258,7 +258,7 @@
         <td width="230">Юрчук Микола </td>
         <td><a href="https://Mykola-Yrchuk.github.io" target="_blank">https://Mykola-Yrchuk.github.io/</a></td>
         <td><a href="https://github.com/Mykola-Yrchuk" target="_blank">https://github.com/Mykola-Yrchuk</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://mykola-yrchuk.42web.io/" target="_blank">http://mykola-yrchuk.42web.io/</a></td>
         <td align="center">0</td>
       </tr>  
 
