--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <td width="230">Гамаш Богдан </td>
         <td><a href="https://bogdan4060.github.io" target="_blank">https://bogdan4060.github.io/</a></td>
         <td><a href="https://github.com/bogdan4060" target="_blank">https://github.com/bogdan4060</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://teamitstepbogdan.rf.gd/" target="_blank">http://teamitstepbogdan.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
