--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@
       <tr>
         <td width="30" align="center">12 </td>
         <td width="230">Повесьмо Анастасія</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://nastya23238290.github.io" target="_blank">https://nastya23238290.github.io/</a></td>
+        <td><a href="https://github.com/nastya23238290" target="_blank">https://github.com/nastya23238290</a></td>
         <td><a href="http://povesmo.rf.gd/" target="_blank">http://povesmo.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -429,7 +429,7 @@
         <td width="230">Заєць Владислав  </td>
         <td><a href="https://zaietsvlad.github.io" target="_blank">https://zaietsvlad.github.io/</a></td>
         <td><a href="https://github.com/zaietsvlad" target="_blank">https://github.com/zaietsvlad</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://zaietsvlad.great-site.net/" target="_blank">http://zaietsvlad.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -437,7 +437,7 @@
         <td width="230">Ковш Юрій </td>
         <td><a href="https://yrkov.github.io" target="_blank">https://yrkov.github.io/</a></td>
         <td><a href="https://github.com/yrkov" target="_blank">https://github.com/yrkov</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://kovshyriy.great-site.net/" target="_blank">http://kovshyriy.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -445,7 +445,7 @@
         <td width="230">Конончук Андрій  </td>
         <td><a href="https://andrikonon.github.io" target="_blank">https://andrikonon.github.io/</a></td>
         <td><a href="https://github.com/andrikonon" target="_blank">https://github.com/andrikonon</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://andrikonon.great-site.net" target="_blank">http://andrikonon.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -453,7 +453,7 @@
         <td width="230">Красовський Богдан  </td>
         <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
         <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://bobohastler.great-site.net" target="_blank">http://bobohastler.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
