Добавив групу - НБД211

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <td width="230">Бєлашов Альберт  </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://arhias.lovestoblog.com/" target="_blank">http://arhias.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -625,7 +625,7 @@
                 <td width="230">Войно Володимир </td>
                 <td><a href="https://voinore1.github.io" target="_blank">https://voinore1.github.io/</a></td>
                 <td><a href="https://github.com/voinore1" target="_blank">https://github.com/voinore1</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://voinore1.infinityfreeapp.com/" target="_blank">http://voinore1.infinityfreeapp.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -633,7 +633,7 @@
                 <td width="230">Кийко Аліна </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://alinakyiko.lovestoblog.com/" target="_blank">http://alinakyiko.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -641,7 +641,7 @@
                 <td width="230">Мартинчук Віталій  </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://vitalii.lovestoblog.com/" target="_blank">http://vitalii.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -649,7 +649,7 @@
                 <td width="230">Півень Марія </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://pivenmaria.lovestoblog.com/" target="_blank">http://pivenmaria.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -665,7 +665,7 @@
                 <td width="230">Россінська Дарія  </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://dashaross.lovestoblog.com/" target="_blank">http://dashaross.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>    
               <tr>
@@ -673,7 +673,7 @@
                 <td width="230">Щиглевський Станіслав  </td>
                 <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
                 <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-                <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+                <td><a href="http://schiglic.lovestoblog.com/" target="_blank">http://schiglic.lovestoblog.com/</a></td>
                 <td align="center">0</td>
               </tr>     
             </table>
