БВ212 - Добавив Челик

--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
       <tr>
         <td width="30" align="center">12 </td>
         <td width="230">Челик Владислав</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://zdtexus.github.io" target="_blank">https://zdtexus.github.io/</a></td>
+        <td><a href="https://github.com/zdtexus" target="_blank">https://github.com/zdtexus</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
+        <td align="center">0</td>   
       </tr>  
       <tr>
         <td width="30" align="center">13</td>
