БВ212 - Добавив Скрябін - сайт

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <td width="230"> Скрябін Тимофій </td>
         <td><a href="https://Skr0fey.github.io" target="_blank">https://Skr0fey.github.io/</a></td>
         <td><a href="https://github.com/Skr0fey" target="_blank">https://github.com/Skr0fey</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://skryabin.infinityfreeapp.com/" target="_blank">http://skryabin.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
