БВ212 - Добавив Челик - сайт

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <td width="230">Челик Владислав</td>
         <td><a href="https://zdtexus.github.io" target="_blank">https://zdtexus.github.io/</a></td>
         <td><a href="https://github.com/zdtexus" target="_blank">https://github.com/zdtexus</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://zdtexus.infinityfreeapp.com/" target="_blank">http://zdtexus.infinityfreeapp.com/</a></td>
         <td align="center">0</td>   
       </tr>  
       <tr>
