БВ212 - Видалив Багель

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <td width="230">Багель Микола </td>
         <td><a href="https://NikolaiCyber.github.io" target="_blank">https://NikolaiCyber.github.io/</a></td>
         <td><a href="https://github.com/NikolaiCyber" target="_blank">https://github.com/NikolaiCyber</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://nikolaycyber.great-site.net/" target="_blank">http://nikolaycyber.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>     
       <tr>
