БВ212 - Добавив Скубік - сайт

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <td width="230">Скубік Олександра </td>
         <td><a href="https://aleksa1911.github.io" target="_blank">https://aleksa1911.github.io/</a></td>
         <td><a href="https://github.com/aleksa1911" target="_blank">https://github.com/aleksa1911</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://aleksaskubik.infinityfreeapp.com/" target="_blank">http://aleksaskubik.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
