Добавив групу БВ212

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <td width="230"> Лагойда Максим </td>
         <td><a href="https://Rinkame0.github.io" target="_blank">https://Rinkame0.github.io/</a></td>
         <td><a href="https://github.com/Rinkame0" target="_blank">https://github.com/Rinkame0</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://lagoyda.great-site.net/" target="_blank">http://lagoyda.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -69,7 +69,7 @@
         <td width="230">Мартинюк Тетяна </td>
         <td><a href="https://martyniuk80.github.io" target="_blank">https://martyniuk80.github.io/</a></td>
         <td><a href="https://github.com/martyniuk80" target="_blank">https://github.com/martyniuk80</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://martyniuktatiana.infinityfreeapp.com/" target="_blank">http://martyniuktatiana.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -77,7 +77,7 @@
         <td width="230"> Марчук Катерина </td>
         <td><a href="https://marchukkk.github.io" target="_blank">https://marchukkk.github.io/</a></td>
         <td><a href="https://github.com/marchukkk" target="_blank">https://github.com/marchukkk</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://marchuk.infinityfreeapp.com/" target="_blank">http://marchuk.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
@@ -93,7 +93,7 @@
         <td width="230"> Ружевич Веніамін </td>
         <td><a href="https://ruzhevych.github.io" target="_blank">https://ruzhevych.github.io/</a></td>
         <td><a href="https://github.com/ruzhevych" target="_blank">https://github.com/ruzhevych</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://ruzhevych.infinityfreeapp.com/" target="_blank">http://ruzhevych.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>   
       <tr>
@@ -101,7 +101,7 @@
         <td width="230">Семенюк Максим</td>
         <td><a href="https://Faust122.github.io" target="_blank">https://Faust122.github.io/</a></td>
         <td><a href="https://github.com/Faust122" target="_blank">https://github.com/Faust122</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://semeniuk.great-site.net/" target="_blank">http://semeniuk.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
