--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <td width="230">Леміч Дмитро </td>
         <td><a href="https://DMThubhydra.github.io" target="_blank">https://DMThubhydra.github.io/</a></td>
         <td><a href="https://github.com/DMThubhydra" target="_blank">https://github.com/DMThubhydra</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://lemich.infinityfreeapp.com/" target="_blank">http://lemich.infinityfreeapp.com/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
