Добавив групу БВ211

--- a/index.html
+++ b/index.html
@@ -269,14 +269,6 @@
         <td width="80" align="center"> Оцінка </td>
       </tr>
       <tr>
-        <td width="30" align="center">1</td>
-        <td width="230">Бідюк Даниїл </td>
-        <td><a href="https://Zwellll.github.io" target="_blank">https://Zwellll.github.io/</a></td>
-        <td><a href="https://github.com/Zwellll" target="_blank">https://github.com/Zwellll</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
-        <td align="center">0</td>
-      </tr>   
-      <tr>
         <td width="30" align="center">2</td>
         <td width="230">Богачук Максим</td>
         <td><a href="https://bogachukmax.github.io" target="_blank">https://bogachukmax.github.io/</a></td>
@@ -329,7 +321,7 @@
         <td width="230">Педос Андрій</td>
         <td><a href="https://nitesw.github.io" target="_blank">https://nitesw.github.io/</a></td>
         <td><a href="https://github.com/nitesw" target="_blank">https://github.com/nitesw</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://pedos.rf.gd/" target="_blank">http://pedos.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
