Добавив групу БВ211-1

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <td width="230">Смоляр Станіслав </td>
         <td><a href="https://stssmlr.github.io" target="_blank">https://stssmlr.github.io/</a></td>
         <td><a href="https://github.com/stssmlr" target="_blank">https://github.com/stssmlr</a></td>
-        <td><a href="http://smoliar.rf.gd/" target="_blank">http://smoliar.rf.gd/</a></td>
+        <td><a href="http://smoliars.rf.gd/" target="_blank">http://smoliars.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
       <tr>
