--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
       <tr>
         <td width="30" align="center">9</td>
         <td width="230">Проценко Данило</td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://NiFFox2q.github.io" target="_blank">https://NiFFox2q.github.io/</a></td>
+        <td><a href="https://github.com/NiFFox2q" target="_blank">https://github.com/NiFFox2q</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>
