Добавив групу БВ211-3

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
       <tr>
         <td width="30" align="center">6</td>
         <td width="230">Мазур Олександр </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://Sasha01M.github.io" target="_blank">https://Sasha01M.github.io/</a></td>
+        <td><a href="https://github.com/Sasha01M" target="_blank">https://github.com/Sasha01M</a></td>
         <td><a href="http://mazur.rf.gd/" target="_blank">http://mazur.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>
