--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
       <tr>
         <td width="30" align="center">3</td>
         <td width="230">Гамаш Богдан </td>
-        <td><a href="https://bogdan4060.github.io" target="_blank">https://bogdan4060.github.io/</a></td>
-        <td><a href="https://github.com/bogdan4060" target="_blank">https://github.com/bogdan4060</a></td>
+        <td><a href="https://gamashbogdan.github.io" target="_blank">https://gamashbogdan.github.io/</a></td>
+        <td><a href="https://github.com/gamashbogdan" target="_blank">https://github.com/gamashbogdan</a></td>
         <td><a href="http://teamitstepbogdan.rf.gd/" target="_blank">http://teamitstepbogdan.rf.gd/</a></td>
         <td align="center">0</td>
       </tr>  
