--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <tr>
         <td width="30" align="center">2</td>
         <td width="230"> Гетьман Назар </td>
-        <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
-        <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
+        <td><a href="https://thattsame.github.io" target="_blank">https://thattsame.github.io/</a></td>
+        <td><a href="https://github.com/thattsame" target="_blank">https://github.com/thattsame</a></td>
         <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
         <td align="center">0</td>
       </tr>  
@@ -446,7 +446,7 @@
         <td width="230">Майлат Анастасія  </td>
         <td><a href="https://NoName.github.io" target="_blank">https://NoName.github.io/</a></td>
         <td><a href="https://github.com/NoName" target="_blank">https://github.com/NoName</a></td>
-        <td><a href="http://NoName.pp.ua/" target="_blank">http://NoName.pp.ua/</a></td>
+        <td><a href="http://maylat.great-site.net/" target="_blank">http://maylat.great-site.net/</a></td>
         <td align="center">0</td>
       </tr>  
       <tr>
